test/test262/src/function-forms/error/async-gen-meth.template
// Copyright (C) 2016 the V8 project authors. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.
/*---
path: language/expressions/object/method-definition/async-gen-meth-
name: async generator method
esid: sec-asyncgenerator-definitions-propertydefinitionevaluation
info: |
    AsyncGeneratorMethod :
        async [no LineTerminator here] * PropertyName ( UniqueFormalParameters )
            { AsyncGeneratorBody }

    1. Let propKey be the result of evaluating PropertyName.
    2. ReturnIfAbrupt(propKey).
    3. If the function code for this AsyncGeneratorMethod is strict mode code, let strict be true.
       Otherwise let strict be false.
    4. Let scope be the running execution context's LexicalEnvironment.
    5. Let closure be ! AsyncGeneratorFunctionCreate(Method, UniqueFormalParameters,
       AsyncGeneratorBody, scope, strict).
    [...]
features: [async-iteration]
---*/

var callCount = 0;
var obj = {
  async *method(/*{ params }*/) {
    /*{ body }*/
    callCount = callCount + 1;
  }
};

assert.throws(/*{ error }*/, function() {
  obj.method(/*{ args }*/);
});
assert.sameValue(callCount, 0, 'generator method body not evaluated');
